<resources>
    <string name="app_name">DynamicWayfinder</string>
    <string name="loginlogcontext">Application Logo</string>
    <string name="login">login</string>
    <string name="passwordlogin">Password</string>
    <string name="emaillogin">Email Address</string>
    <string name="signuplogin">Sign Up</string>
    <string name="forgotpasswordlogin">Forgot your password?</string>
    <string name="nav_home">Home</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_setting">Setting</string>
    <string name="slogan">Find Your way,the right way </string>
    <string name="logouttext">Log Out</string>
    <string name="usersnamedefault">Users Name</string>
    <string name="usersemailaddressdescription">Users email address</string>
    <string name="defaultuseremail">default@gmail.com</string>
    <string name="editprofilebutton">Edit Profile</string>
    <string name="emailinprofile">E-mail</string>
    <string name="editfirstname">First Name</string>
    <string name="editlastname">Last Name</string>
    <string name="savechangesbutton">Save Changes</string>
    <string name="forgotpwordemail">Email Address</string>
    <string name="sendpwordemail">Reset Password</string>
    <string name="defaultvalue">Default Value</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account">user_account</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_image_path">image_path</string>
    <string name="field_name">name</string>
    <string name="new_photo">new_photo</string>
    <string name="selected_image">selected_image</string>
    <string name="string_next">Next</string>
    <string name="sign_out">Sign Out</string>


</resources>
