<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView android:background="@color/colorPrimary"
                android:id="@+id/loginlogo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="fill"
                android:contentDescription="@string/loginlogcontext"
                android:src="@drawable/dynamiclogo" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/loginlogo"


                >

                <EditText
                    android:id="@+id/user"
                    android:layout_width="290sp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:ems="10"
                    android:hint="@string/emaillogin"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="290sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/passwordlogin"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="200sp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:onClick="loginUser"
                    android:text="@string/login"
                    android:textColor="@color/slightgrey" />

                <Button
                    android:id="@+id/signupbutton"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/loginbutton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:onClick="registerUser"
                    android:text="@string/signuplogin"
                    android:textColor="@color/slightgrey" />

                <TextView
                    android:id="@+id/forgotpasswordbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/signupbutton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:foregroundGravity="center"
                    android:onClick="forgotuserpword"
                    android:paddingTop="5dp"
                    android:text="@string/forgotpasswordlogin"
                    android:textSize="12sp" />

                <View  android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loginprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>
